Frame size at tall height adjustment

--- a/index.html
+++ b/index.html
@@ -672,15 +672,15 @@
 		}
 		else if ( height > 210 )
 		{
-			totalMultiplier = 1 + muscle + torso * 0.5 + ape + ethnicity * 0.2 + frame * 0.5;
+			totalMultiplier = 1 + muscle + torso * 0.5 + ape + ethnicity * 0.2 + (frame + 0.03);
 		}
 		else if ( height > 190 )
 		{
-			totalMultiplier = 1 + muscle + torso * 0.667 + ape + ethnicity * 0.4 + frame * 0.667;
+			totalMultiplier = 1 + muscle + torso * 0.667 + ape + ethnicity * 0.4 + (frame + 0.02) ;
 		}
 		else if ( height > 180 )
 		{
-			totalMultiplier = 1 + muscle + torso * 0.833 + ape + ethnicity * 0.8 + frame * 0.833;
+			totalMultiplier = 1 + muscle + torso * 0.833 + ape + ethnicity * 0.8 + (frame + 0.01);
 		}
 		else
 		{
