Rebalanced Muscle gains and added experience required for a given muscle level. Added Early intermediate option.

--- a/index.html
+++ b/index.html
@@ -153,10 +153,11 @@
 			<label for="muscle">Hypertrophy level:</label>
 			<select id="muscle">
 				<option value="-0.06">Untrained</option>
-				<option value="0.0">Beginner</option>
-				<option value="0.05">Novice</option>
-				<option value="0.09">Intermediate</option>
-				<option value="0.12">Advanced</option>
+				<option value="0.0">Beginner (3 months)</option>
+				<option value="0.03">Novice (6 months)</option>
+    <option value="0.06">Early Intermediate (1 year)</option>
+				<option value="0.1">Intermediate (2 years)</option>
+				<option value="0.14">Advanced (5 years)</option>
 			</select>
 
 			<label for="ethnicity">Race:</label>
