--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
 				<option value="0.03">Novice (6 months)</option>
     <option value="0.06">Early Intermediate (1 year)</option>
 				<option value="0.1">Intermediate (2 years)</option>
-				<option value="0.14">Advanced (5 years)</option>
+    <option value="0.13">Late Intermediate (3 years)</option>
+				<option value="0.16">Advanced (5 years)</option>
 			</select>
 
 			<label for="ethnicity">Race:</label>
