--- a/index.html
+++ b/index.html
@@ -155,10 +155,11 @@
 				<option value="-0.06">Untrained</option>
 				<option value="0.0">Beginner (3 months)</option>
 				<option value="0.03">Novice (6 months)</option>
-    <option value="0.065">Early Intermediate (1 year)</option>
+    <option value="0.065">Late Novice (1 year)</option>
 				<option value="0.105">Intermediate (2 years)</option>
     <option value="0.13">Late Intermediate (3 years)</option>
 				<option value="0.155">Advanced (5 years)</option>
+			<option value="0.17">Late Advanced (7 years)</option>
 			</select>
 
 			<label for="ethnicity">Race:</label>
