--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		#result { margin-top: 24px; font-size: 18px; font-weight: 600; color: #2f855a; text-align: center; }
 		.small { font-size:13px; color:#666 }
 		.unit-label { min-width:44px; text-align:right; display:inline-block; margin-left:6px }
-		.horizontal-group { display: flex; gap: 20px; flex-wrap: wrap; /* allows wrapping on small screens */ }
+		.horizontal-group { display: flex; gap: 16px; flex-wrap: wrap; /* allows wrapping on small screens */ }
 		.field { display: flex; flex-direction: column; min-width: 50px; }
 	</style>
 </head>
@@ -80,11 +80,11 @@
 		  </div>
 
 		  <div class="field">
-			<label for="ethnicity">Race:</label>
+			<label for="ethnicity">Population:</label>
 			<select id="ethnicity">
 			  <option value="0">White/Mixed</option>
 			  <option value="-0.04">Asian</option>
-			  <option value="0.03">Black</option>
+			  <option value="0.03">African</option>
 			</select>
 		  </div>
 
@@ -669,4 +669,5 @@
 </script>
 </body>
 </html>
+
 
