Added more populations

--- a/index.html
+++ b/index.html
@@ -82,9 +82,14 @@
 		  <div class="field">
 			<label for="ethnicity">Population:</label>
 			<select id="ethnicity">
-			  <option value="0">White/Mixed</option>
-			  <option value="-0.04">Asian</option>
-			  <option value="0.03">African</option>
+			  <option value="0">Caucasian</option>
+			  <option value="0.02">African American</option>
+			  <option value="-0.02">Latin American</option>
+			  <option value="0.01">East African</option>
+			  <option value="0.03">West African</option>
+			  <option value="-0.01">Central Asian</option>
+			  <option value="-0.04">East Asian</option>
+			  <option value="-0.05">South Asian</option>
 			</select>
 		  </div>
 
